force-app/main/default/objects/Assessment_Score__c/Assessment_Score__c.object-meta.xml
<CustomObject>
    <label>Assessment Score</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>