force-app/main/default/objects/Assessment_Score__c/fields/Assessment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Criteria__c</fullName>
    <label>Assessment Criteria</label>
    <referenceTo>Assessment_Criteria__c</referenceTo>
    <relationshipLabel>Assessment Scores</relationshipLabel>
    <relationshipName>Assessment_Scores</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>