force-app/main/default/objects/Assessment_Score__c/fields/AssessmentCriteriaAssessment__c.field-meta.xml
<CustomField>
    <fullName>AssessmentCriteriaAssessment__c</fullName>
    <externalId>true</externalId>
    <label>AssessmentCriteriaAssessment</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>