force-app/main/default/objects/Assessment_Score__c/fields/Weighted_Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score_Formula__c</fullName>
    <formula>Weighting__c *  value(text(Score__c)) * 10</formula>
    <label>Weighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>