force-app/main/default/objects/Assessment_Score__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <formula>Assessment_Criteria__r.Weighting__c</formula>
    <label>Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>